JABERA-5 add getAllPosts to controller and service, test for this and previous tests fixed